--- a/style.css
+++ b/style.css
@@ -7,10 +7,16 @@
 }
 
 .gameboard {
+  border: solid 1px black;
+  width: 300px;
+  height: 300px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
 }
 
 .game-squares {
+  border: solid 1px black;
+  height: 100px;
+  width: 100px;
 }
