Utilized addEventListener once option to remove the addEventListener and not allow players to override other places already selected spaces

--- a/style.css
+++ b/style.css
@@ -19,4 +19,7 @@
   border: solid 1px black;
   height: 100px;
   width: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
